--- a/sec-5-optimisation.tex
+++ b/sec-5-optimisation.tex
@@ -1112,6 +1112,7 @@ cunc$\cdot$ta$\cdot$tion
 \textcolor{gray}{|
 k\textipa{@}NGk\textquotesingle t\={a}SH\textipa{@}n
 \enspace\textipa{k@Nk}\textquotesingle \textipa{te\;IS@n}
+% kəNGkˈtāSHən\enspace kəŋkˈteɪʃən
 |} (n) the action or an instance of delaying; tardy action.}
 %
 is parameterised by the recursive closure of array computations \code{acc}, the
