--- a/sec-6-results.tex
+++ b/sec-6-results.tex
@@ -783,3 +783,63 @@ bandwidth clearly wins. Automatic use of shared memory is a separate
 consideration to the optimisations discussed in this work, and remains an open
 research problem~\cite{Ma:2010ft}.
 
+
+\section{Fluid Flow}
+
+The fluid flow example implements Jos Stam's stable fluid
+algorithm~\cite{Stam:1999ey}, which is a fast approximate algorithm intended for
+animation and games, rather than accurate engineering simulation. An example
+sequence is shown in Figure~\ref{fig:fluid_steps}.
+
+\begin{figure}[htbp]
+    \begin{center}
+        \includegraphics[width=0.3\textwidth]{images/sec-6/fluid/fluid-10}
+        \includegraphics[width=0.3\textwidth]{images/sec-6/fluid/fluid-50}
+        \includegraphics[width=0.3\textwidth]{images/sec-6/fluid/fluid-75}
+    \end{center}
+    \caption[Example of the fluid flow simulation]{An example showing the
+        progression of the fluid flow simulation for a set of initial conditions
+        after 10 (left), 50 (centre) and 75 (right) steps.}
+    \label{fig:fluid_steps}
+\end{figure}
+
+The core of the algorithm is a finite time step simulation on a grid,
+implemented as a matrix relaxation involving the discrete Laplace operator
+($\nabla^2$). This step, known as the linear solver, is used to diffuse the
+density and velocity fields throughout the grid, as well as apply a projection
+operator to the velocity field to ensure it conserves mass. The linear solver is
+implemented in terms of a stencil convolution, repeatedly computing the
+following for each grid element to allow the solution to converge:
+\[
+u_{i,j}^{''} = \left( u_{i,j} + a \cdot \left( u'_{i-1,j}+u'_{i+1,j}+u'_{i,j-1}+u'_{i,j+1} \right) \right) / c
+\]
+Here, $u$ is the grid in the previous time step, $u'$ the grid in the current
+time step and previous relaxation iteration, and $u''$ the current time step and
+iteration. The values $a$ and $c$ are constants chosen by the simulation
+parameters.
+
+\begin{figure}[htbp]
+    \begin{center}
+        \includegraphics[width=0.8\textwidth]{images/sec-6/fluid/fluid}
+    \end{center}
+    \caption[Fluid flow simulation kernel benchmarks]{Kernel runtimes for the
+        fluid flow simulation, in Accelerate with and without optimisations,
+        compared to sequential and parallel CPU implementations. Running the
+        Repa program with seven threads on the eight cores was found to be
+        faster. Note the log-log scale.}
+    \label{fig:fluid}
+\end{figure}
+
+Figure~\ref{fig:fluid} compares Accelerate to a parallel implementation written
+in Repa and running on the host CPU \cite{Lippmeier:2012vv}. The program is
+extremely memory intensive, performing approximately 160 convolutions of the
+grid per time step. Given the nature of the computation, we find that the raw
+bandwidth available on the CUDA device, which is much greater than that
+available to CPU, results in correspondingly shorter run times. Since the
+program consists of a sequence of stencil operations, fusion does not apply to
+this program. Sharing recovery has a surprisingly minimal impact because the
+implementation of stencils always shares some parts of the computation: namely
+access to the grid elements $u_{xy}$, precisely because these operations are so
+expensive.
+
+
