sec 6: import basic text for remaining benchmarks from acc-optim

--- a/preamble.tex
+++ b/preamble.tex
@@ -43,6 +43,7 @@
 \usepackage{mflogo}
 \usepackage[numbers,sort&compress,nonamebreak]{natbib}
 % \usepackage{pdfsync}
+\usepackage{rotating}
 \usepackage{setspace}
 % \usepackage{showidx}
 \usepackage[color,draft]{showkeys}
