--- a/thesis.bib
+++ b/thesis.bib
@@ -952,7 +952,7 @@ editor = {Deussen, O and Hansen, C and Keim, D A and Saupe, D},
 pages = {221--230}
 }
 
-@article{Williams:2009,
+@article{Williams:2009cy,
 author = {Williams, Samuel and Oliker, Leonid and Vuduc, Richard and Shalf, John and Yelick, Katherine and Demmel, James},
 title = {{Optimization of sparse matrix-vector multiplication on emerging multicore platforms}},
 journal = {Parallel Computing},
