sec 6: canny stuffs

--- a/preamble.tex
+++ b/preamble.tex
@@ -39,6 +39,7 @@
 \usepackage{longtable}
 \usepackage{makeidx}
 \usepackage{marginnote}
+\usepackage{mathtools}
 \usepackage{mathrsfs}
 \usepackage{mflogo}
 \usepackage[numbers,sort&compress,nonamebreak]{natbib}
