--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Fri, 12 Jul 2013.
+%% Created using Papers on Wed, 17 Jul 2013.
 %% http://papersapp.com/papers/
 
 @book{Altenkirch:2003kz,
@@ -248,7 +248,8 @@ booktitle = {Proceedings of the 15th ACM SIGPLAN international conference on Fun
 year = {2010},
 pages = {261--272},
 publisher = {ACM},
-address = {New York, NY, USA}
+address = {New York, NY, USA},
+month = sep
 }
 
 @article{Appel:1997gs,
@@ -465,13 +466,13 @@ pages = {123--169},
 annote = {Survey of parallel programming models, judged based on: * suitability for realistic problems * easy to use \{\&} understand * sound software development methodology * architecture-independent * guarantee performance (parallel execution is deterministic?) * accurate cost model A programming model is an abstract model of computation that is used by the programmer to reason about how a program executes. A processing model is similar, but describes how a physical machine actually performs computation. The goal of any programming language implementation is to efficiently translate a computation expressed relative to the programming model used by the programmer into the processing model used by the target hardware.}
 }
 
-@inproceedings{BenLippmeier:2012cd,
-author = {Ben Lippmeier and Keller, Gabriele},
+@inproceedings{Lippmeier:2011cd,
+author = {Lippmeier, Ben and Keller, Gabriele},
 title = {{Efficient parallel stencil convolution in Haskell}},
 booktitle = {Haskell '11: Proceedings of the 4th ACM symposium on Haskell},
-year = {2012},
+year = {2011},
 publisher = { ACM  Request Permissions},
-month = jan
+month = sep
 }
 
 @article{Barnes:1986,
@@ -695,13 +696,13 @@ address = {New York, NY, USA},
 annote = {Describes ThreadScope and its use to improve the performance of semi-implicit parallel programs (par, pseq) through case study discussion.}
 }
 
-@inproceedings{Lippmeier:2012vv,
+@inproceedings{Lippmeier:2012gx,
 author = {Lippmeier, Ben and Chakravarty, Manuel M T and Keller, Gabriele and Jones, Simon Peyton},
 title = {{Guiding parallel array fusion with indexed types}},
 booktitle = {Haskell '12: Proceedings of the 2012 symposium on Haskell symposium},
-year = {2013},
+year = {2012},
 publisher = { ACM  Request Permissions},
-month = jan
+month = sep
 }
 
 @inproceedings{Sweeney:2006,
@@ -1912,10 +1913,12 @@ pages = {325--335},
 annote = {A C\{\#} library of abstractions for data-parallel arrays and operations that allows programmers to combine operations for the CPU and GPU within a single application. To improve efficiency, the library uses a graph-based lazy evaluation strategy of data-parallel operations on the GPU. Evaluation is typically triggered by the explicit conversion of an array from a data-parallel to a serial representation.}
 }
 
-@inproceedings{Lippmeier:WZGJsUgV,
+@inproceedings{Lippmeier:2013vz,
 author = {Lippmeier, Ben and Chakravarty, Manuel M T and Keller, Gabriele and Robinson, Amos},
 title = {{Data Flow Fusion with Series Expressions in Haskell}},
-booktitle = {Haskell '13: Proceedings of the 2013 symposium on Haskell}
+booktitle = {Haskell '13: Proceedings of the 2013 symposium on Haskell},
+year = {2013},
+month = sep
 }
 
 @book{Gibbons:1988,
